# github-issue-analyzer

./: readme.md
backend/: app.py  models.py  pyproject.toml  schemas.py
backend/instance/: issues.db
backend/resources/: analyze.py  scan.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnalyzeForm.tsx  MarkdownRenderer.tsx  ScanForm.tsx
